fix(bikes-api): missing domain field attr
